--- a/app/views/_layouts/includes/aside.jade
+++ b/app/views/_layouts/includes/aside.jade
@@ -1,10 +1,13 @@
 aside.aside
   ul.nav-vertical--lighten
-    li: a(href="#") Árboles Nativos/Frutal/Medicinal
-    li: a(href="#") Canteros disponibles
-    li: a(href="#") Viveros satelitales
-    li: a(href="#") Árboles madres
-    li: a(href="#") Viveros didacticos/capacitaciones
-    li: a(href="#") Reservas naturales
-  p: a.boton-formulario(href="https://docs.google.com/forms/d/1dxAsrKamJTD7hZ04Knang5LB3e6tHDLYNa1MqUVeuYA/viewform", target="_blank") Cargar árbol
+    li: a#siembras(href="#") Siembras
+    li: a#cosechas(href="#") Cosechas
+    li: a#plantaciones(href="#") Plantaciones
+    li: a#banco_semillas(href="#") Bancos de semillas
+    li: a#quiero_apadrinar(href="#") Quiero apadrinar un arbol
+  p: a.boton-formulario(href="https://docs.google.com/forms/d/1sGsrso05ThbMokDlg-2zO53y1xUM-5PaIys8i3Z8yhU/viewform", target="_blank") Mapear una siembra
+  p: a.boton-formulario(href="https://docs.google.com/forms/d/1iVx8dbrYZQBFrRrG0yWd87mDBlCtPO-ViYJ_Nb27vTA/viewform", target="_blank") Mapear un Arbol de cosecha
+  p: a.boton-formulario(href="https://docs.google.com/forms/d/1RIBWLLITL4C3g7-ROcghs3Lq9JBdtMwlIX2WjV196mI/viewform", target="_blank") Mapear una Plantada
+  p: a.boton-formulario(href="https://docs.google.com/forms/d/1M8JJCxxBzAQrpmS9CXe3Rf_AT0j6B3dtQkGKFJWQqx8/viewform", target="_blank") Mapear un Banco de semillas
+  p: a.boton-formulario(href="https://docs.google.com/forms/d/1-jGHNnGKeXAT9lJRQA9GPzRFrAz6Tqc3809zq5JNmT0/viewform", target="_blank") Apadrinar un arbol
   include footer
